[package]
name = "threshold-secret-sharing"
version = "0.2.3-pre"
authors = [
  "Morten Dahl <morten.dahl@snips.ai>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of various threshold secret sharing schemes"
keywords = [
  "secret-sharing",
  "Shamir",
  "cryptography",
  "secure-computation",
  "mpc"
]
homepage = "https://github.com/snipsco/rust-threshold-secret-sharing"
documentation = "https://docs.rs/threshold-secret-sharing"
license = "MIT/Apache-2.0"
categories = [ "cryptography" ]
edition = "2018"

[badges]
travis-ci = { repository = "snipsco/rust-threshold-secret-sharing" }

[features]
default = []
paramgen = ["primal"]
with-testing = ["inventory", "testing"]

[dependencies]
#rand = "0.3.*"
primal = { version = "0.2", optional = true }

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "packed"
harness = false

[dependencies.inventory]
optional    = true
version     = "0.1.6"

[dependencies.rand]
git         = "https://github.com/apache/teaclave-sgx-sdk"
package     = "sgx_rand"
rev         = "v1.1.2"

[dependencies.sgx_tstd]
features    = ["thread"]
git         = "https://github.com/apache/teaclave-sgx-sdk"
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/usccommunity/teaclave-testing"
optional    = true
